--- a/notebooks/chunk_embed_index.ipynb
+++ b/notebooks/chunk_embed_index.ipynb
@@ -20,10 +20,33 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "ac5844b9",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[OK] HuggingFace cache set to: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\.venv\\Lib\\site-packages\\transformers\\utils\\hub.py:110: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+                        "  warnings.warn(\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✓ Imports and setup complete!\n"
+                    ]
+                }
+            ],
             "source": [
                 "import sys\n",
                 "from pathlib import Path\n",
@@ -50,32 +73,6 @@
         },
         {
             "cell_type": "markdown",
-            "id": "546f66a0",
-            "metadata": {},
-            "source": [
-                "## 1.1 Stratified Sampling\n",
-                "\n",
-                "We apply stratified sampling to select a representative subset of 10,000 complaints. This ensures the vector store is built on a manageable dataset while maintaining the proportional distribution of product categories from the filtered dataset."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "0f3dbf8f",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Select a stratified sample of 10k records\n",
-                "target_sample_size = 10000\n",
-                "print(f\"Applying stratified sampling (Target: {target_sample_size})...\")\n",
-                "df = create_stratified_sample(df, target_size=target_sample_size)\n",
-                "\n",
-                "# Verify final shape\n",
-                "print(f\"Sample size for indexing: {len(df):,}\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
             "id": "c2c6d447",
             "metadata": {},
             "source": [
@@ -86,10 +83,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "222103a6",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[OK] Loaded 12,000 processed DATA from filtered_complaints.csv\n",
+                        "✓ Found 'clean_narrative' for indexing\n",
+                        "Snippet: during the whole time that i had wells fargo ive experienced on going issues that has never been res...\n",
+                        "Total records loaded: 12,000\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Load cleaned data\n",
                 "processed_data_path = config.PROCESSED_DATA_PATH\n",
@@ -109,6 +117,52 @@
         },
         {
             "cell_type": "markdown",
+            "id": "546f66a0",
+            "metadata": {},
+            "source": [
+                "## 1.1 Stratified Sampling\n",
+                "\n",
+                "We apply stratified sampling to select a representative subset of 10,000 complaints. This ensures the vector store is built on a manageable dataset while maintaining the proportional distribution of product categories from the filtered dataset."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "id": "0f3dbf8f",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Applying stratified sampling (Target: 10000)...\n",
+                        "[OK] Created stratified sample: 10,000 rows\n",
+                        "\n",
+                        "Proportional Representation Check (Product %):\n",
+                        "                                                    Original %  Sample %\n",
+                        "Product                                                                 \n",
+                        "Checking or savings account                              39.28     39.27\n",
+                        "Credit card                                              22.58     22.57\n",
+                        "Credit card or prepaid card                              30.42     30.42\n",
+                        "Money transfers                                           0.42      0.42\n",
+                        "Payday loan, title loan, or personal loan                 4.82      4.83\n",
+                        "Payday loan, title loan, personal loan, or adva...        2.49      2.49\n",
+                        "Sample size for indexing: 10,000\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Select a stratified sample of 10k records\n",
+                "target_sample_size = 10000\n",
+                "print(f\"Applying stratified sampling (Target: {target_sample_size})...\")\n",
+                "df = create_stratified_sample(df, target_size=target_sample_size)\n",
+                "\n",
+                "# Verify final shape\n",
+                "print(f\"Sample size for indexing: {len(df):,}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "84b8bfe8",
             "metadata": {},
             "source": [
@@ -119,10 +173,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "id": "a859c2e4",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✓ Converted 10,000 rows to LangChain Documents\n",
+                        "  Sample metadata keys: ['complaint_id', 'product', 'sub_product', 'issue', 'sub_issue', 'company', 'state', 'date_received', 'timely_response', 'consumer_disputed']\n",
+                        "============================================================\n",
+                        "DOCUMENT SAMPLE\n",
+                        "============================================================\n",
+                        "Content:\n",
+                        "i attempted to make reservations for a hotel in xxxx on xx xx xxxx. i received a text notification that it might be fraudulent. i approved the charge and it when through. a subsequent charge was decli...\n",
+                        "------------------------------------------------------------\n",
+                        "Metadata:\n",
+                        "  complaint_id: 5266207\n",
+                        "  product: Credit card or prepaid card\n",
+                        "  sub_product: General-purpose credit card or charge card\n",
+                        "  issue: Trouble using your card\n",
+                        "  sub_issue: Can't use card to make purchases\n",
+                        "  company: CITIBANK, N.A.\n",
+                        "  state: WA\n",
+                        "  date_received: 2022-02-27\n",
+                        "  timely_response: Yes\n",
+                        "  consumer_disputed: None\n",
+                        "============================================================\n"
+                    ]
+                }
+            ],
             "source": [
                 "docs = dataframe_to_documents(df)\n",
                 "\n",
@@ -143,10 +224,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "id": "8ab5f67a",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[OK] Created text splitter (chunk_size=500, overlap=50)\n",
+                        "[OK] Chunking complete:\n",
+                        "  Original documents: 10,000\n",
+                        "  After chunking: 31,643\n",
+                        "  Expansion ratio: 3.16x\n",
+                        "\n",
+                        "Chunking Stats: {'total_chunks': 31643, 'min_length': 3, 'max_length': 500, 'mean_length': 372.8, 'median_length': 412}\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Splitting documents into chunks\n",
                 "chunks = chunk_documents(docs)\n",
@@ -168,10 +263,25 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "id": "9bc4a65d",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Creating vector store with 31,643 documents...\n",
+                        "  Persist directory: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
+                        "Loading embedding model: sentence-transformers/all-MiniLM-L6-v2\n",
+                        "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n",
+                        "✓ Embedding model loaded\n",
+                        "✓ FAISS index built (ntotal=31,643)\n",
+                        "✓ Vector store persisted to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
+                        "✓ Vector store built and saved to disk.\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Create and persist vector store\n",
                 "# Note: On the first run, this download the model (~80MB)\n",
@@ -191,10 +301,55 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "id": "81557b4f",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Loading vector store from c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss...\n",
+                        "Loading embedding model: sentence-transformers/all-MiniLM-L6-v2\n",
+                        "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n",
+                        "✓ Embedding model loaded\n",
+                        "✓ Vector store loaded (ntotal=31,643)\n",
+                        "✓ Created retriever (k=3)\n",
+                        "======================================================================\n",
+                        "SEARCH RESULTS for: 'unauthorized charge on my credit card'\n",
+                        "======================================================================\n",
+                        "\n",
+                        "--- Result 1 ---\n",
+                        "Complaint ID: N/A\n",
+                        "Product: N/A\n",
+                        "Issue: N/A\n",
+                        "Company: N/A\n",
+                        "Chunk Index: 4\n",
+                        "Content preview:\n",
+                        ". furthermore, i did not have the credit card in my physical presence and eyesight the entire time i was in xxxx ( xx xx xxxx-xx xx xxxx ). i handed the card over to merchants on several occasions for them to run it through for other charges that i recognize ( like for a dinner or gas ). so, it is p...\n",
+                        "\n",
+                        "--- Result 2 ---\n",
+                        "Complaint ID: N/A\n",
+                        "Product: N/A\n",
+                        "Issue: N/A\n",
+                        "Company: N/A\n",
+                        "Chunk Index: 0\n",
+                        "Content preview:\n",
+                        "my card was charge unauthorize. but credit card company is not willing to correct this charge....\n",
+                        "\n",
+                        "--- Result 3 ---\n",
+                        "Complaint ID: N/A\n",
+                        "Product: N/A\n",
+                        "Issue: N/A\n",
+                        "Company: N/A\n",
+                        "Chunk Index: 0\n",
+                        "Content preview:\n",
+                        "there has been unauthorized charges of 2600.00 on a credit card that i have known as last four ( xxxx ) xxxx citi simplicity credit card, i have contacted their customer care and their security department indicating them of all these bogus charges and to this date nothing has been done about resolvi...\n",
+                        "\n",
+                        "======================================================================\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Test loading from disk\n",
                 "vectorstore_v2 = load_vector_store()\n",
@@ -220,10 +375,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "id": "acec8d7a",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Total vectors in index: 31,643\n",
+                        "Sample chunk metadata from retriever result:\n",
+                        "{'complaint_id': 3374042, 'product': 'Credit card or prepaid card', 'sub_product': 'General-purpose credit card or charge card', 'issue': 'Problem with a purchase shown on your statement', 'sub_issue': 'Card was charged for something you did not purchase with the card', 'company': 'CAPITAL ONE FINANCIAL CORPORATION', 'state': 'IL', 'date_received': '2019-09-13', 'timely_response': 'Yes', 'consumer_disputed': None, 'chunk_index': 4}\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(f\"Total vectors in index: {vectorstore_v2.index.ntotal:,}\")\n",
                 "print(f\"Sample chunk metadata from retriever result:\")\n",
