updated with compiled output

--- a/notebooks/chunk_embed_index.ipynb
+++ b/notebooks/chunk_embed_index.ipynb
@@ -7,12 +7,24 @@
             "source": [
                 "# RAG Pipeline: Production-Level Indexing\n",
                 "\n",
-                "This notebook demonstrates the production-level indexing pipeline for the CSV data and how to leverage pre-built embeddings for large-scale retrieval.\n",
+                "This notebook demonstrates the production-level indexing pipeline for the consumer complaint dataset. It focuses on efficiency by leveraging pre-computed embeddings.\n",
                 "\n",
-                "### Key features:\n",
-                "1. **Alignment with `src/vectorstore.py`**: Using the same optimized logic as the production scripts.\n",
-                "2. **Memory-Efficient Processing**: Batch loading for large datasets.\n",
-                "3. **Pre-built Integration**: Demonstrating how to load the 1.3M+ records store from `data/complaint_embeddings.parquet`."
+                "## Project Architecture & Flow\n",
+                "\n",
+                "1.  **Data Ingestion**: Raw consumer complaints are ingested (handled in `eda.ipynb`).\n",
+                "2.  **Preprocessing**: Text is cleaned, sensitive info removed, and handled.\n",
+                "3.  **Embedding Generation (Optimization)**:\n",
+                "    *   Instead of generating embeddings on the fly for 1.3M+ records (which is slow), we use a **Pre-built Embedding Store** (`data/complaint_embeddings.parquet`).\n",
+                "    *   This file contains `(text_chunk, embedding_vector, metadata)` triplets.\n",
+                "4.  **Vector Store Construction**:\n",
+                "    *   We load the parquet file and build a **FAISS Index**.\n",
+                "    *   The index allows for millisecond-latency similarity search.\n",
+                "5.  **RAG Inference**:\n",
+                "    *   The application (`app.py`) loads this FAISS index.\n",
+                "    *   User Query -> Embedding -> FAISS Search -> Top-K Context -> LLM -> Answer.\n",
+                "\n",
+                "### In This Notebook:\n",
+                "We specifically handle **Step 4**: Efficiently loading/building the FAISS index from the pre-built parquet file and verifying it works."
             ]
         },
         {
@@ -89,26 +101,43 @@
                         "Vector store path: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
                         "Pre-built embeddings: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet\n",
                         "Loading embedding model: sentence-transformers/all-MiniLM-L6-v2\n",
-                        "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "'(MaxRetryError('HTTPSConnectionPool(host=\\'huggingface.co\\', port=443): Max retries exceeded with url: /sentence-transformers/all-MiniLM-L6-v2/resolve/main/modules.json (Caused by NameResolutionError(\"HTTPSConnection(host=\\'huggingface.co\\', port=443): Failed to resolve \\'huggingface.co\\' ([Errno 11001] getaddrinfo failed)\"))'), '(Request ID: 854cb151-19ba-40d7-a574-9e82ef81120a)')' thrown while requesting HEAD https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/./modules.json\n",
-                        "Retrying in 1s [Retry 1/5].\n",
-                        "'(MaxRetryError('HTTPSConnectionPool(host=\\'huggingface.co\\', port=443): Max retries exceeded with url: /sentence-transformers/all-MiniLM-L6-v2/resolve/main/modules.json (Caused by NameResolutionError(\"HTTPSConnection(host=\\'huggingface.co\\', port=443): Failed to resolve \\'huggingface.co\\' ([Errno 11001] getaddrinfo failed)\"))'), '(Request ID: 985820e4-4480-4a59-9eaf-87192eb9ddc5)')' thrown while requesting HEAD https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/./modules.json\n",
-                        "Retrying in 2s [Retry 2/5].\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
+                        "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n",
                         "[OK] Embedding model loaded\n",
-                        "Loading existing FAISS index from c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss...\n",
-                        "[OK] Vector store loaded (ntotal=1,375,327)\n",
+                        "FAISS index not found at c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
+                        "Building index from pre-built source: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet\n",
+                        "Opening parquet file: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet...\n",
+                        "Total rows to process: 1,375,327\n",
+                        "Initializing FAISS with first batch of 50,000...\n",
+                        "  Progress: 50,000 / 1,375,327 (3.6%)\n",
+                        "  Progress: 100,000 / 1,375,327 (7.3%)\n",
+                        "  Progress: 150,000 / 1,375,327 (10.9%)\n",
+                        "  Progress: 200,000 / 1,375,327 (14.5%)\n",
+                        "  Progress: 250,000 / 1,375,327 (18.2%)\n",
+                        "  Progress: 300,000 / 1,375,327 (21.8%)\n",
+                        "  Progress: 350,000 / 1,375,327 (25.4%)\n",
+                        "  Progress: 400,000 / 1,375,327 (29.1%)\n",
+                        "  Progress: 450,000 / 1,375,327 (32.7%)\n",
+                        "  Progress: 500,000 / 1,375,327 (36.4%)\n",
+                        "  Progress: 550,000 / 1,375,327 (40.0%)\n",
+                        "  Progress: 600,000 / 1,375,327 (43.6%)\n",
+                        "  Progress: 650,000 / 1,375,327 (47.3%)\n",
+                        "  Progress: 700,000 / 1,375,327 (50.9%)\n",
+                        "  Progress: 750,000 / 1,375,327 (54.5%)\n",
+                        "  Progress: 800,000 / 1,375,327 (58.2%)\n",
+                        "  Progress: 850,000 / 1,375,327 (61.8%)\n",
+                        "  Progress: 900,000 / 1,375,327 (65.4%)\n",
+                        "  Progress: 950,000 / 1,375,327 (69.1%)\n",
+                        "  Progress: 1,000,000 / 1,375,327 (72.7%)\n",
+                        "  Progress: 1,050,000 / 1,375,327 (76.3%)\n",
+                        "  Progress: 1,100,000 / 1,375,327 (80.0%)\n",
+                        "  Progress: 1,150,000 / 1,375,327 (83.6%)\n",
+                        "  Progress: 1,200,000 / 1,375,327 (87.3%)\n",
+                        "  Progress: 1,250,000 / 1,375,327 (90.9%)\n",
+                        "  Progress: 1,300,000 / 1,375,327 (94.5%)\n",
+                        "  Progress: 1,350,000 / 1,375,327 (98.2%)\n",
+                        "  Progress: 1,375,327 / 1,375,327 (100.0%)\n",
+                        "[OK] Built FAISS index with 1,375,327 vectors.\n",
+                        "Saving built index to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss for future use...\n",
                         "\n",
                         "✓ Vector store active with 1,375,327 vectors.\n"
                     ]
@@ -119,7 +148,8 @@
                 "print(f\"Pre-built embeddings: {config.PREBUILT_EMBEDDINGS_PATH}\")\n",
                 "\n",
                 "# Load existing or build from parquet\n",
-                "vs = vectorstore.load_vector_store()\n",
+                "# Set force_rebuild=True to ensure we use the pre-built parquet file if needed\n",
+                "vs = vectorstore.load_vector_store(force_rebuild=False)\n",
                 "print(f\"\\n✓ Vector store active with {vs.index.ntotal:,} vectors.\")"
             ]
         },
@@ -232,39 +262,6 @@
                 "    print(f\"  {k}: {v}\")\n",
                 "\n",
                 "print(f\"\\nContent Snippet:\\n{sample_doc.page_content[:200]}...\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "batch-build-demo",
-            "metadata": {},
-            "source": [
-                "## 3. Building From Parquet (Internal Logic)\n",
-                "\n",
-                "To handle 1.3M records without crashing memory, we use `pyarrow` to process the parquet file in batches. This logic is encapsulated in `vectorstore.build_vector_store_from_parquet`."
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 5,
-            "id": "parquet-logic-show",
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Batch processing is automatically handled by the src scripts to ensure scalability.\n"
-                    ]
-                }
-            ],
-            "source": [
-                "# Example of how batches ARE processed (mental model)\n",
-                "# for batch in pf.iter_batches(batch_size=50000):\n",
-                "#     df_batch = batch.to_pandas()\n",
-                "#     vectorstore.add_embeddings(texts=df_batch['document'], ...)\n",
-                "\n",
-                "print(\"Batch processing is automatically handled by the src scripts to ensure scalability.\")"
             ]
         }
     ],
