--- a/notebooks/rag_pipeline.ipynb
+++ b/notebooks/rag_pipeline.ipynb
@@ -271,7 +271,7 @@
                 {
                     "data": {
                         "text/markdown": [
-                            "*Retrieved 5 sources from products: {'Checking or savings account', 'Credit card', 'Credit card or prepaid card', 'Payday loan, title loan, or personal loan'}*"
+                            "*Retrieved 5 sources from products: {'Credit card', 'Credit card or prepaid card', 'Payday loan, title loan, or personal loan', 'Checking or savings account'}*"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
@@ -478,7 +478,7 @@
                 {
                     "data": {
                         "text/markdown": [
-                            "*Retrieved 5 sources from products: {'Payday loan, title loan, personal loan, or advance loan', 'Credit card'}*"
+                            "*Retrieved 5 sources from products: {'Credit card', 'Payday loan, title loan, personal loan, or advance loan'}*"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
@@ -616,7 +616,7 @@
                 {
                     "data": {
                         "text/markdown": [
-                            "*Retrieved 5 sources from products: {'Payday loan, title loan, personal loan, or advance loan', 'Payday loan, title loan, or personal loan', 'Consumer Loan'}*"
+                            "*Retrieved 5 sources from products: {'Consumer Loan', 'Payday loan, title loan, or personal loan', 'Payday loan, title loan, personal loan, or advance loan'}*"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
@@ -685,7 +685,7 @@
                 {
                     "data": {
                         "text/markdown": [
-                            "*Retrieved 5 sources from products: {'Checking or savings account', 'Money transfer, virtual currency, or money service'}*"
+                            "*Retrieved 5 sources from products: {'Money transfer, virtual currency, or money service', 'Checking or savings account'}*"
                         ],
                         "text/plain": [
                             "<IPython.core.display.Markdown object>"
