--- a/notebooks/chunk_embed_index.ipynb
+++ b/notebooks/chunk_embed_index.ipynb
@@ -5,9 +5,9 @@
             "id": "intro",
             "metadata": {},
             "source": [
-                "# RAG Pipeline: Production-Level Indexing\n",
+                "# RAG Pipeline\n",
                 "\n",
-                "This notebook demonstrates the production-level indexing pipeline for the consumer complaint dataset. It focuses on efficiency by leveraging pre-computed embeddings.\n",
+                "This notebook demonstrates indexing pipeline for the consumer complaint dataset. It focuses on efficiency by leveraging pre-computed embeddings.\n",
                 "\n",
                 "## Project Architecture & Flow\n",
                 "\n",
@@ -24,7 +24,7 @@
                 "    *   User Query -> Embedding -> FAISS Search -> Top-K Context -> LLM -> Answer.\n",
                 "\n",
                 "### In This Notebook:\n",
-                "We specifically handle **Step 4**: Efficiently loading/building the FAISS index from the pre-built parquet file and verifying it works."
+                "We specifically handle : Efficiently loading/building the FAISS index from the pre-built parquet file and verifying it works."
             ]
         },
         {
@@ -103,41 +103,8 @@
                         "Loading embedding model: sentence-transformers/all-MiniLM-L6-v2\n",
                         "  (First run will download ~80MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n",
                         "[OK] Embedding model loaded\n",
-                        "FAISS index not found at c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss\n",
-                        "Building index from pre-built source: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet\n",
-                        "Opening parquet file: c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\data\\complaint_embeddings.parquet...\n",
-                        "Total rows to process: 1,375,327\n",
-                        "Initializing FAISS with first batch of 50,000...\n",
-                        "  Progress: 50,000 / 1,375,327 (3.6%)\n",
-                        "  Progress: 100,000 / 1,375,327 (7.3%)\n",
-                        "  Progress: 150,000 / 1,375,327 (10.9%)\n",
-                        "  Progress: 200,000 / 1,375,327 (14.5%)\n",
-                        "  Progress: 250,000 / 1,375,327 (18.2%)\n",
-                        "  Progress: 300,000 / 1,375,327 (21.8%)\n",
-                        "  Progress: 350,000 / 1,375,327 (25.4%)\n",
-                        "  Progress: 400,000 / 1,375,327 (29.1%)\n",
-                        "  Progress: 450,000 / 1,375,327 (32.7%)\n",
-                        "  Progress: 500,000 / 1,375,327 (36.4%)\n",
-                        "  Progress: 550,000 / 1,375,327 (40.0%)\n",
-                        "  Progress: 600,000 / 1,375,327 (43.6%)\n",
-                        "  Progress: 650,000 / 1,375,327 (47.3%)\n",
-                        "  Progress: 700,000 / 1,375,327 (50.9%)\n",
-                        "  Progress: 750,000 / 1,375,327 (54.5%)\n",
-                        "  Progress: 800,000 / 1,375,327 (58.2%)\n",
-                        "  Progress: 850,000 / 1,375,327 (61.8%)\n",
-                        "  Progress: 900,000 / 1,375,327 (65.4%)\n",
-                        "  Progress: 950,000 / 1,375,327 (69.1%)\n",
-                        "  Progress: 1,000,000 / 1,375,327 (72.7%)\n",
-                        "  Progress: 1,050,000 / 1,375,327 (76.3%)\n",
-                        "  Progress: 1,100,000 / 1,375,327 (80.0%)\n",
-                        "  Progress: 1,150,000 / 1,375,327 (83.6%)\n",
-                        "  Progress: 1,200,000 / 1,375,327 (87.3%)\n",
-                        "  Progress: 1,250,000 / 1,375,327 (90.9%)\n",
-                        "  Progress: 1,300,000 / 1,375,327 (94.5%)\n",
-                        "  Progress: 1,350,000 / 1,375,327 (98.2%)\n",
-                        "  Progress: 1,375,327 / 1,375,327 (100.0%)\n",
-                        "[OK] Built FAISS index with 1,375,327 vectors.\n",
-                        "Saving built index to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss for future use...\n",
+                        "Loading existing FAISS index from c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss...\n",
+                        "[OK] Vector store loaded (ntotal=1,375,327)\n",
                         "\n",
                         "✓ Vector store active with 1,375,327 vectors.\n"
                     ]
@@ -267,7 +234,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv (3.11.9)",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
