--- a/notebooks/rag_pipeline.ipynb
+++ b/notebooks/rag_pipeline.ipynb
@@ -12,7 +12,7 @@
                 "### Pipeline Components:\n",
                 "1. **Vector Store**: FAISS index containing complaint embeddings.\n",
                 "2. **Retriever**: Similarity search mechanism to find top-K relevant documents.\n",
-                "3. **LLM**: Instruction-tuned model (FLAN-T5) to generate answers based on context.\n",
+                "3. **LLM**: Instruction-tuned model (Phi-3 Mini) to generate answers based on context.\n",
                 "4. **Prompt Engineering**: Structured templates to guide the LLM's response."
             ]
         },
@@ -61,7 +61,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "id": "rag-init-exec",
             "metadata": {},
             "outputs": [
@@ -77,28 +77,217 @@
                         "[OK] Embedding model loaded\n",
                         "Loading existing FAISS index from c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\vector_store\\faiss...\n",
                         "[OK] Vector store loaded (ntotal=1,375,327)\n",
-                        "Loading LLM: google/flan-t5-small\n",
-                        "  (First run will download ~300MB to c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf)\n",
-                        "  Max new tokens: 256\n",
+                        "Loading Alternative LLM: microsoft/Phi-3-mini-4k-instruct\n",
+                        "  Max new tokens: 512\n",
                         "  Temperature: 0.1\n"
                     ]
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "0f50c134ca864b87b2675c92b24cb140",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "Device set to use cpu\n"
+                        "c:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Acer\\Documents\\KAIM_PROJECT\\TEST\\rag-complaint-chatbot\\models\\hf\\models--microsoft--Phi-3-mini-4k-instruct. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+                        "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+                        "  warnings.warn(message)\n",
+                        "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
                     ]
                 },
                 {
-                    "name": "stdout",
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "77ff174689b1493685aa5f3a0f002fd5",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "tokenizer.model:   0%|          | 0.00/500k [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "ef87e5e89c924c4dbeaff894511ddd82",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "tokenizer.json: 0.00B [00:00, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "4f5352037d8e4f0bb6f8057917a1b29c",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "added_tokens.json:   0%|          | 0.00/306 [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "ac36c3cd8e634f2a86d2ce364be5b333",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "special_tokens_map.json:   0%|          | 0.00/599 [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "bc971fef4fba4244a19fa77c3f487b19",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "config.json:   0%|          | 0.00/967 [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "692d2596cf9443dd97bd9026d73f2e1e",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "configuration_phi3.py: 0.00B [00:00, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "[OK] LLM loaded and ready\n",
-                        "--- Pipeline Ready ---\n",
-                        "\n",
-                        "✓ RAG Pipeline initialized and ready!\n"
+                        "A new version of the following files was downloaded from https://huggingface.co/microsoft/Phi-3-mini-4k-instruct:\n",
+                        "- configuration_phi3.py\n",
+                        ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n"
                     ]
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "89a3fb1a01d246bc9ad7e65aca3b2dbd",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "modeling_phi3.py: 0.00B [00:00, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "A new version of the following files was downloaded from https://huggingface.co/microsoft/Phi-3-mini-4k-instruct:\n",
+                        "- modeling_phi3.py\n",
+                        ". Make sure to double-check they do not contain any added malicious code. To avoid downloading new versions of the code file, you can pin a revision.\n",
+                        "`flash-attention` package not found, consider installing for better performance: No module named 'flash_attn'.\n",
+                        "Current `flash-attention` does not support `window_size`. Either upgrade or use `attn_implementation='eager'`.\n",
+                        "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+                    ]
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "8e8433aad61d43a2a2005972451261c0",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "model.safetensors.index.json: 0.00B [00:00, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "eea10b401a154a60b6ff01d03eefa17b",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "Fetching 2 files:   0%|          | 0/2 [00:00<?, ?it/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+                        "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+                    ]
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "c17cae95222641fe8e68fba169fdba78",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "model-00002-of-00002.safetensors:   0%|          | 0.00/2.67G [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "data": {
+                        "application/vnd.jupyter.widget-view+json": {
+                            "model_id": "9649fe2f94414d8db6d4b8da8c5e0a71",
+                            "version_major": 2,
+                            "version_minor": 0
+                        },
+                        "text/plain": [
+                            "model-00001-of-00002.safetensors:   0%|          | 0.00/4.97G [00:00<?, ?B/s]"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
             "source": [
@@ -158,7 +347,7 @@
                 "For each question, we run the full RAG cycle:\n",
                 "1. **Retrieve**: Find top 5 relevant complaint chunks.\n",
                 "2. **Augment**: Format the chunks into a context string for the prompt.\n",
-                "3. **Generate**: Use FLAN-T5 to generate a professional answer based *only* on the context."
+                "3. **Generate**: Use Phi-3 Mini to generate a professional answer based *only* on the context."
             ]
         },
         {
@@ -928,7 +1117,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv (3.11.9)",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
